Creat 'add book' function which displays info on page additively

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#card {
+.book-card {
     background-color: white;
+    margin: 5px 0 5px 0;
 }
