--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,180 @@
 
 
 body{
-    background-color: lightgray;
+    background-color: #d6e7ea;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
 }
+
+#container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50px 100px));
+}
+
+ul{
+    list-style-type: none;
+}
+
+li{
+    padding: 5px 0 5px 0;
+    border-bottom: lightgray 0.5px solid;
+    margin-bottom: 20px;
+}
+
+dialog{
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    padding-right: 50px;
+    font-weight:bold;
+    
+    
+}
+h1{
+    text-align: center;
+}
+dialog>h3{
+    text-align: center;
+    margin-left: 40px;
+}
+
+#title, #author, #pages{
+    outline: none;
+    border: none;
+    margin: 10px 0 20px 0;
+    background-color: #d3e0ee;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    height: 5px;
+    width: 300px;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: .9rem;;
+}
+input:focus{
+    box-shadow: 4px 4px 4px rgb(231, 231, 231) ;
+}
+
+.read-option{
+    appearance: none;
+    border: none;
+    margin-bottom: 20px;
+    background-color: #d3e0ee;
+    outline: none;
+}
+
+label{
+    margin-right: 5px;
+    padding-bottom: 15px;
+    margin-top: 30px;
+    font-size: 1rem;;
+}
+
+
+
+button{
+    appearance: none;
+    border: none;
+    padding: 10px;
+    margin:20px;
+    width: 100px;
+    border-radius: 10px;
+    font-size: .9rem;
+
+}
+
+#button-container{
+    display: grid;
+    align-content: center;
+}
+
+#add-new{
+   
+    width: 150px;
+    border-radius: 10px;
+    background-color: #6f89D8;
+    font-weight: bold;
+    justify-self: center;
+   
+    
+}
+
+#add-new:focus{
+    background-color: #2c4980;
+    color: white
+}
+
+#read{
+    margin: 10px 10px 10px 0;
+    border: none;
+    padding: 10px 10px 10px 10px;
+    border-radius: 10px;
+    outline: none;
+    width: 100px;
+    font-size: .9rem;
+}
+
+.read-option[value="yes"]{
+    background-color: chartreuse;
+}
+
+.read-option[value=no]{
+    background-color: rgb(255, 0, 76);
+}
+
+
+
 
 .book-card {
     background-color: white;
     margin: 5px 0 5px 0;
+}
+
+.category{
+    font-weight: bold;;
+}
+
+#rating:focus{
+    box-shadow: none;
+}
+/* #rating{
+    margin: 10px 0 10px 0;
+    padding:5px;
+    
+    border-radius: 10px;
+  
+} */
+
+/* #rating::before{
+    margin:0 0 0 -5px;
+    content: "1";
+    
+    padding-right: 3px;
+}
+#rating::after{
+    content:"5";
+    margin: 0 -20px 10px 0;
+    padding-left: 15px;
+}
+.rating-scale{
+    width: 10px;
+
+
+} */
+
+.book-card{
+    border-radius: 15px;
+    width: 20%;
+    padding: 15px 0 15px 0;
+    margin: 5px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.book-card h3 {
+  margin-bottom: 25px;
+  
 }
