--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ dialog>h3{
     margin: 10px 0 20px 0;
     background-color: #d3e0ee;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    /* grid-template-columns: 1fr 3fr; */
     height: 5px;
     width: 300px;
     border-radius: 10px;
@@ -80,6 +80,7 @@ button{
     width: 100px;
     border-radius: 10px;
     font-size: .9rem;
+    background-color:#b1bbd8;
 
 }
 
@@ -112,7 +113,10 @@ button{
     outline: none;
     width: 100px;
     font-size: .9rem;
+    display: grid;
 }
+
+
 
 .read-option[value="yes"]{
     background-color: chartreuse;
@@ -134,8 +138,27 @@ button{
     font-weight: bold;;
 }
 
+#rating{
+    display: grid;
+}
+
 #rating:focus{
     box-shadow: none;
+}
+
+datalist{
+    display: flex;
+  
+  justify-content: space-between;
+  writing-mode: horizontal-tb;
+  width: 100%;
+
+}
+option{padding: 0;}
+
+input[type="range"]{
+    width: 100%;
+    margin: 0;
 }
 /* #rating{
     margin: 10px 0 10px 0;
