--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,22 @@
 body{
     background-color: #d6e7ea;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+   
+    
+    
+    
+    
     
 }
 
 #container{
+    
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50px 100px));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+    margin: auto;
+    max-width: 1350px;
+
 }
 
 ul{
@@ -147,7 +157,7 @@ button:active{
 }
 
 .category{
-    font-weight: bold;;
+    font-size: 1.1rem;
 }
 
 #rating{
@@ -199,17 +209,34 @@ input[type="range"]{
 
 .book-card{
     border-radius: 15px;
-    width: 20%;
-    padding: 15px 0 15px 0;
-    margin: 5px;
-    
+  
+    padding: 10px 30px 10px 30px;
+    /* margin: 5px; */
+    box-shadow: 3px 2px 4px #bac4d8;
+    /* display: grid;
+     */
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+   
 }
 
 .book-card h3 {
-  margin-bottom: 25px;
+  margin:auto auto 10px auto;
+  /* justify-self: center; */
   
+}
+
+.book-card div{
+    margin: auto calc(auto-20px);
+}
+
+
+
+.delete-button{
+    width: 150px;
+   
+    margin: auto;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
 }
