Add rating to object and display it in dom
Also removed  annoying box-shadow on range input

--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@ button:active{
     display: grid;
 }
 
-#rating:focus{
+#rating:active, #rating:hover, #rating:focus{
     box-shadow: none;
 }
 
